# iochibity

./: .bazelrc  .gitignore  ANDROID.txt  BAZEL.txt  BUILD  BUILD.cbor  BUILD.coap  BUILD.dtls  BUILD.mbedtls  CHANGELOG.md  GUIDE.adoc  INSTALL.txt  LICENSE.md  NOTICE.md  README.adoc  REFACTOR.adoc  SConstruct  UPGRADING.txt  WORKSPACE  auto_build.sh  configure  configure.ac  gtags.conf  gtags.files  upgrade.sh
bindings/javalang/: BUILD
build_common/: SConscript  external_libs.scons
build_common/android/: SConscript
build_common/darwin/: SConscript
build_common/linux/: SConscript
cloud/: SConscript
compilers/: mingw64_7_2_0.BUILD
config/: BUILD  cjson.BUILD  gtest.BUILD  libcoap.BUILD  sqlite3.BUILD  tinycbor.BUILD  variables.bzl
config/darwin/: BUILD  coap_config.h  iotivity_config.h
config/mbedtls/: BUILD
doc/: AUTOTOOLS.adoc  BAZEL.adoc  CROSSCOMPILE.adoc  CodingConventions.adoc  FIXES.txt  GUIDE.adoc  MAKEHEADERS.adoc  NEWBUILD.adoc  NOTES.txt  PORTABILITY.adoc  ROADMAP.adoc  SECURITY.adoc  TROUBLESHOOTING.adoc  The Makeheaders Program.html  UPGRADING.txt  darwin.adoc  iotivity.3  networking.adoc  ocinit.3  simpleserver.adoc  testing.adoc  threads.adoc  time.adoc
doc/modules/: collections.c  groups.c  ocstack.c
etc/source.me/: android.targethost  clean  darwin  darwin.devhost  darwin.targethost  edison  edison.devhost  edison.targethost  linux  linux.devhost  ubuntu
examples-bazel/OCSample/: BUILD  occlient.c  ocserver.c
examples-bazel/simple/: BUILD
examples/OICMiddle/: SConscript  WrapResource.h
examples/browser/: BUILD  TODO.adoc  action_dialog.c  client.c  client.h  client.hx  client_threaded.c  client_ui.c  menu.c  menu.h  msg_scrollers.hx  server.c
examples/discovery/: BUILD  README.adoc  client.c  server.c
examples/monitor/: BUILD  client.c  client_threaded.c
examples/provisioning/: provisioningclient.c
examples/simple/: BUILD  WORKSPACE  gui.c  gui.h  occlient.c  occlient.h  ocserver.c
extensions/resource_directory/: BUILD  oicresourcedirectory.c
extlibs/: hippomocks.scons
extlibs/arduino/: SConscript
extlibs/asn1cert/: SConscript
extlibs/gtest/: SConscript
extlibs/rapidxml/: rapidxml_print.hpp
extlibs/sqlite3/: SConscript
extlibs/tinycbor/: SConscript
extlibs/tinydtls/: README  SConscript  crypto.c  dtls.c
headers/: BUILD
hosts/: SConscript  external_libs.scons
hosts/darwin/: SConscript
hosts/edison/: SConscript
hosts/linux/: SConscript
include/: BUILD  openocf.h  openocf_h.h
java/: SConscript  settings.gradle
java/examples-java/: build.gradle  settings.gradle
java/iotivity-android/: build.gradle
java/iotivity-darwin/: build.gradle
java/jni/: JniCaInterface.c  JniCaInterface.h  JniDisplayPinListener.cpp  JniDisplayPinListener.h  JniEntityHandler.h  JniListenerManager.h  JniOcPlatform.cpp  JniOcPlatform.h  JniOcPresenceHandle.cpp  JniOcPresenceHandle.h  JniOcProvisioning.cpp  JniOcProvisioning.h  JniOcRepresentation.cpp  JniOcRepresentation.h  JniOcRequestHandle.cpp  JniOcRequestHandle.h  JniOcResource.cpp  JniOcResource.h  JniOcResourceHandle.cpp  JniOcResourceHandle.h  JniOcResourceIdentifier.cpp  JniOcResourceIdentifier.h  JniOcResourceRequest.cpp  JniOcResourceRequest.h  JniOcResourceResponse.cpp  JniOcResourceResponse.h  JniOcSecureResource.cpp  JniOcSecureResource.h  JniOcSecurity.cpp  JniOcSecurity.h  JniOcStack.cpp  JniOcStack.h  JniOnDeleteListener.cpp  JniOnDeleteListener.h  JniOnDeviceInfoListener.cpp  JniOnDeviceInfoListener.h  JniOnGetListener.cpp  JniOnGetListener.h  JniOnObserveListener.cpp  JniOnObserveListener.h  (+19 more)
log/: README.txt
man/: OCInit.3  OCProcess.3
plugins/: SConscript
plugins/include/: plugintypes.h
plugins/src/: SConscript
plugins/unittests/: SConscript
plugins/zigbee_wrapper/: SConscript
resource/: SConscript  third_party_libs.scons  unit_tests.scons
resource/c_common/: SConscript  TODO.txt  boot.edn  oc_uuid.c  ocrandom.c  ocrandom.h  oic_time.c
resource/csdk/: SConscript
resource/examples/: SConscript
resource/include/: OCApi.h  OCRepresentation.h
resource/oc_logger/: SConscript
resource/provisioning/: SConscript
resource/src/: InProcServerWrapper.cpp  OCRepresentation.cpp  OCResource.cpp  SConscript
resource/unittests/: OCPlatformTest.cpp  OCRepresentationEncodingTest.cpp  OCRepresentationTest.cpp  README  SConscript
service/: SConscript  third_party_libs.scons
service/easy-setup/: SConscript
service/resource-container/: SConscript
service/resource-directory/: SConscript
service/resource-encapsulation/: SConscript
service/resource-hosting/: SConscript
service/scene-manager/: SConscript
service/simulator/: SConscript
service/things-manager/: SConscript
site_scons/: site_init.py
site_scons/runtest/: RunTest.py
site_scons/setup/: targets.py
site_scons/site_tools/: RunTest.py  __init__.py
src/: BUILD  README.adoc  _openocf_config_mingw.h  _openocf_config_win.h  _system.h  bazel-bin  bazel-genfiles  bazel-out  bazel-src  bazel-testlogs  cnoh.android  cnoh.darwin  cnoh.linux  cnoh.other  cnoh.portability  cnoh.windows  iotivity_config.h  iotivity_config.h.in  iotivity_constants.h  iotivity_debug.h  msvc_config.h  openocf_config.c  openocf_config.c.in  openocf_config_win.c  platform_features.h  system.c  system.h  transport_types.h
src/cbor/: BUILD  oocf_cbor_decode.c  oocf_cbor_encode.c
src/coap/: BUILD  cablockwisetransfer.c  caping.c  coap_codec.c  coap_tcp_signaling.c  oocf_coap_logging.c  oocf_coap_options.c
src/comm/: BLUETOOTH.adoc  BUILD  README.adoc  _addressing.c  _addressing.h  _coap.c  _coap.h  _error.h  _globals.c  _globals.h  _history.c  _history.h  _network.h  _processing.c  _processing.h  _request.h  _response.c  _response.h  _sockets.c  _sockets.h  ca_adapter_net_ssl.c  caadapterinterface.c  caadapternetdtls.c  cablockwisetransfer.c  caconnectivitymanager.c  cainterfacecontroller.c  cainterfacecontroller.h  camessagehandler.c  camessagehandler.h  camutex_pthreads.c  error.c  (+11 more)
test/: BUILD  SConscript  variables.bzl
tools/: BUILD  README.adoc  bazel.rc  cnoh.c  dot.bazelrc  makeheaders.c
(+1132 files in other folders)
